--- a/DevopsClassFront/src/App.css
+++ b/DevopsClassFront/src/App.css
@@ -45,11 +45,12 @@
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  flex-direction: column;
 }
 
 .form-container,
 .table-container {
-  width: 45%;
+  min-width: 800px;
 }
 
 form {
@@ -80,7 +81,13 @@ th, td {
   text-align: left;
 }
 
-th {
-  background-color: #f4f4f4;
+tr td:first-child {
+  font-weight: bold;
+  width: 5px;
+  text-align: center;
 }
 
+footer {
+  margin-top: 40px;
+  opacity: 0.5;
+}
